--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '1'
 
 services:
-  app:
+  vision_pro:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: /home/deepfine/data/docker/mob_gpt_visionOS_API/Dockerfile
+    volumes:
+      - shared-data:/home/deepfine/data/vision_pro
     ports:
       - "3000:3000"
     command:
       - npm run local
-    volumes:
-      - ./:/app/
