--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       POSTGRES_USER: deepfine
       POSTGRES_PASSWORD: ckddjq0323
+      POSTGRES_DB: deepfine
       POSTGRES_INITDB_ARGS: --encoding=UTF-8
       TZ: "Asia/Seoul"
     volumes:
